--- a/themes/husserl/asset/sass/00_common/_reset.scss
+++ b/themes/husserl/asset/sass/00_common/_reset.scss
@@ -32,11 +32,16 @@ html {
     overflow-x: hidden;
 }
 
-/*button, input {
+button, input {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-}*/
+}
+
+img {
+    width: 100%;
+    height: 100%;
+}
 
 a {
     text-decoration: none;
