--- a/themes/husserl/view/search/search.phtml
+++ b/themes/husserl/view/search/search.phtml
@@ -82,7 +82,7 @@ $this->htmlElement('body')->appendAttribute('class', 'search-page item-set resou
     <div class="search__search-wrapper search-wrapper result-wrapper">
         <aside class="search-wrapper__browse-search-aside browse-search-aside search-aside">
             <div class="search-aside__search-nav search-nav browse-search-nav">
-                <div class="search-nav__nav-aside-item nav-aside-item filter-item-nav">
+                <div class="search-nav__nav-aside-item nav-aside-item active filter-item-nav">
                     <p class="nav-aside-item__nav-aside-item-text nav-aside-item-text filter-item-nav">Filter</p>
                     <div class="nav-aside-item__nav-aside-item-icon nav-aside-item-icon filter-icon">          
                         <svg width="30" height="27" viewBox="0 0 30 27" fill="none" xmlns="http://www.w3.org/2000/svg">
